devops/duly-aks-helmcharts/duly-d-app-aks/prometheus/prom-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-service
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.duly-np-local.digital
    http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus-server
              port: 
                number: 9090
